--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -4,21 +4,7 @@ on: push
 
 jobs:
 
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.22'
-
-    - name: Build
-      run: go build -v ./...
-
   tests:
-    needs: build
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -27,9 +13,16 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.22'
+
+    - name: Vet
+      run: |
+          go vet ./...
     
     - name: Test
       run: go test -v ./...
+
+    - name: Build
+      run: go build -v ./...
 
   deploy:
     needs: tests
